--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,5 +43,6 @@ layout: table_wrappers
   {% if site.mermaid %}
     {% include components/mermaid.html %}
   {% endif %}
+  <script src="{{ '/assets/js/main.js' | relative_url }}" type="module"></script>
 </body>
 </html>
