--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@ layout: table_wrappers
 
 <html lang="{{ site.lang | default: 'en-US' }}">
 {% include head.html %}
+<link rel="stylesheet" href="{{ '/assets/css/custom.css' | relative_url }}">
 <body>
   <a class="skip-to-main" href="#main-content">Skip to main content</a>
   {% include icons/icons.html %}
@@ -43,6 +44,5 @@ layout: table_wrappers
   {% if site.mermaid %}
     {% include components/mermaid.html %}
   {% endif %}
-  <script src="{{ '/assets/js/main.js' | relative_url }}" type="module"></script>
 </body>
 </html>
